--- a/styles/list/list-header.css
+++ b/styles/list/list-header.css
@@ -5,8 +5,37 @@
   background-color: #ed3d34;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
-#list-header h2{
+#title {
+  padding-left: 25px;
+  display: flex;
+  align-items: center;
+}
+
+#title h2 {
+  margin: 0px;
+  color: #ffffff;
   font-weight: 300;
+}
+
+#list-icon-container {
+  padding-right: 25px;
+
+  display: flex;
+  align-items: center;
+  column-gap: 50px;
+}
+
+#plus-icon {
+  width: 30px;
+}
+
+#collapseList-icon {
+  width: 30px;
+}
+
+#threeDot-icon {
+  width: 30px;
 }
