task HTML completed, HTML & CSS are done

--- a/styles/general.css
+++ b/styles/general.css
@@ -9,6 +9,12 @@ body {
   display: flex;
   flex-direction: row;
   font-family: 'Noto Sans JP', sans-serif;
+
+  overflow: hidden;
+}
+
+h1{
+  margin: 0px;
 }
 
 p {
