--- a/styles/list/list-body.css
+++ b/styles/list/list-body.css
@@ -4,6 +4,20 @@
   border-left: 1px solid#dddddd;
 }
 
+h1 {
+  margin: 0px;
+}
+
+#taskTitle {
+  font-family: "Noto Sans JP", sans-serif;
+  font-size: 30px;
+  width: 100%;
+  border: none;
+  padding-left: 0px;
+  background-color: #00000000;
+  outline: none;
+}
+
 .tasklist {
   padding: 0px 20px;
 }
@@ -20,15 +34,25 @@
 }
 
 .task-name {
+  font-family: "Noto Sans JP", sans-serif;
+  width: 100%;
   border: none;
   background-color: #00000000;
   outline: none;
+}
+
+.task-name.active {
+  color: #808080;
+  font-style: italic;
+  text-decoration: line-through;
 }
 
 .checkbox-container {
   margin: 0px 15px;
   margin-right: 6px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
 .checkbox {
@@ -51,4 +75,8 @@
   background-color: #808080;
   margin-left: 15px;
   margin-right: 20px;
+}
+
+.taskStateColor.activeColor {
+  background-color: #009726;
 }
